# myModebus

./: .gitignore  README.md  TODOS.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
