[package]
name = "my-modebus"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_modebus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
rfd = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
